# guzum

./: .gitignore  .hgignore  AUTHORS  CHANGES  CMakeLists.txt  COPYING  DEVELOPMENT.md  GPL.txt  LICENSES.md  README-dev  README.md  TODO  TODO.md  guzum.desktop  guzum.pro  guzum.sublime-project
debian/: changelog  control  copyright  guzum.dirs  guzum.install  rules
docs/: features.markdown  features.md
resources/: Guzum.xcf  Info.plist  application.qrc
resources/icons/: guzum.icns
resources/text/: guzum.desktop
scripts/: check-dbus-appendFile  create-dmg  gen-src-file  macos-build-icns
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  controlpeer.cpp  controlpeer.h  encryptedtextwindow.cpp  encryptedtextwindow.h  gpgmewrapper.cpp  gpgmewrapper.h  guzum-ru.ts  macos.h  macos.mm  main.cpp  managehistorydialog.cpp  managehistorydialog.h  managehistorydialog.ui  passphrasedialog.cpp  passphrasedialog.h  passphrasedialog.ui  prefsdialog.cpp  prefsdialog.h  prefsdialog.ui  secureplaintexteditor.cpp  secureplaintexteditor.h  settings.cpp  settings.h  settings.h.in  src.pro  translations.qrc  traymanager.cpp  traymanager.h  traymenuadaptor.cpp  traymenuadaptor.h
test-gpg/: armored-sample.txt.asc  passphrase.txt  pubring.gpg  random_seed  sample.txt  sample.txt.asc  sample.txt.gpg  sample.txt.gpg.orig  secring.gpg  trustdb.gpg
translations/: guzum_ru.ts
